<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>JFileQueueManager</groupId>
  <artifactId>JFileQueueManager</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-beans</artifactId>
  		<version>4.0.3.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-context</artifactId>
  		<version>4.0.3.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-core</artifactId>
  		<version>4.0.3.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-expression</artifactId>
  		<version>4.0.3.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.11</version>
  	</dependency>
  	<dependency>
 		 <groupId>log4j</groupId>
 		 <artifactId>log4j</artifactId>
 		 <version>1.2.16</version>
	</dependency>
  </dependencies>
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.1</version>
  			<configuration>
  			    <source>7</source>
          		<target>7</target>
  			</configuration>
  		</plugin>
  		
  		<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<configuration>

							<executable>java</executable>
							<arguments>
								<!-- <argument>-Djava.server.codebase=target/rmi-classes</argument>
								<argument>-Djava.security.manager</argument>
								<argument>-Djava.security.policy=java.policy</argument> -->
								<argument>-classpath</argument> 
								<classpath />  
								<argument>org.bitbucket.ab.jfqm.Main</argument>
								<!--  <argument>${remote}</argument>  -->
							</arguments>

						</configuration>
					</plugin>
  		
  	</plugins>
  </build>
</project>